[metadata]
license = MIT
license_file = LICENSE 
classifiers = 
    programming Language :: Python :: 3.7
    programming Language :: Python :: 3.8
    programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
install_requires = 
    ensure
    py-youtube

python_requires = >=3.7

[options.extras_require]
testing = 
    pytest
    mypy
    flake8
    tox
    black

[options.package_data]
IPYNBrenderer = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py